# spotfire_expr_normalizer

./: .gitignore  README.md  pyproject.toml
src/spotfire_expr_normalizer/: __init__.py  catalog.py  normalizer.py
src/spotfire_expr_normalizer/data/: ETL0202_SPOTFIRE_UNSUPPORTED_FUNCTIONS.md  __init__.py  spotfire_function_catalog.sqlite
tests/: test_normalizer.py
util/: build_spotfire_function_catalog.py
